# technopark_C-Cpp_individual_task_2

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: CI.yml
project/cmd/: CMakeLists.txt  main.c
project/include/: file.h  max_ascending_seq.h  task.h
project/src/: file.c  task.c
project/src/max_asc_seq_lib/: CMakeLists.txt  file.c  max_ascending_seq.c
project/src/max_asc_seq_parallel_lib/: CMakeLists.txt  max_ascending_seq_parallel.c
project/test/: adapter_parallel.cpp  file_test.cpp  main.cpp  max_asc_seq_test.cpp  stress_test.cpp
project/test/fin_fout/10_out_of_20/: fin
project/test/fin_fout/14_out_of_40/: fin
project/test/fin_fout/16_out_of_17/: fin
project/test/fin_fout/1_out_of_100/: fin
project/test/fin_fout/invalid_args/: erange_element  text
